# obsidian-semantic-knowledge-system

./: .env.example  AGENTS.md  ISSUES.md  README.md  TODO.md  agents_md_obsidian_semantic_knowledge_system.md  pyproject.toml
.opencode/agents/: semantix.md
src/semantix/: __init__.py  backlinks.py  cli.py  config.py  dedupe.py  generate.py  ingest.py  models.py
src/semantix.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
